src/static/css/page.css
/* ... */
[data-translation] {
  display: none;
}

.authors h2,
.chapter_links h2 {
  padding: 16px 0;
  padding: 1rem 0;
}

.authors,
.authors h2,
.chapter_links,
.chapter_links h2 {
  border-bottom: 1px solid #1a2b490a;
  font-size: 17px;
  font-size: 1.0625rem;
}

.content .authors ul {
  margin: 16px 0;
  margin: 1rem 0;
  padding: 0;
}

.content .authors li::before {
  content: none;
  width: 0;
  margin-left: 0;
}

.content .authors li {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 32px;
  margin-top: 2rem;
  overflow: visible;
  display: grid;
  grid-template-areas: 'avatar info';
  grid-template-columns: 76px auto;
  grid-template-columns: 4.75rem auto;
  grid-template-columns: 4.75rem calc(100% - 4.75rem); /* auto sometimes not set correctly on font zoom */
}

.authors .name {
  font-size: 24px;
  font-size: 1.5rem;
  margin-right: 16px;
  margin-right: 1rem;
  margin-bottom: 10px;
  margin-bottom: 0.625rem;
  display: inline-block;
}

.authors .tagline {
  font-size: 16px;
  font-size: 1rem;
}

.authors .avatar {
  width: 60px;
  height: 60px;
  border-radius: 50%;
}

.authors .social {
  font-size: 0.9em;
}

.authors .social a {
  margin: 0.25rem 1rem 0.25rem 0;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  text-decoration: none;
}

.authors .social a:last-child {
  margin-right: 0;
}

.authors .social a:hover,
.authors .social a:focus {
  text-decoration: underline;
}

.authors .social svg {
  width: 1.5em;
  height: auto;
  margin-right: 4px;
  margin-right: 0.25rem;
}

#chapter-navigation {
  padding: 50px 36px;
  padding: 3.125rem 2.25rem;
  border: 1px solid #1a2b490a;
  margin: 20px 0;
  margin: 1.25rem 0;
  overflow: hidden;
}

#chapter-navigation > a {
  color: #1a2b49;
  width: 50%;
  min-width: 100px;
  min-width: 6.25rem;
  display: inline-block;
  position: relative;
}

#chapter-navigation span {
  display: block;
}

#chapter-navigation .chapter-no {
  font-size: 22px;
  font-size: 1.375rem;
  font-weight: bold;
  font-style: italic;
}

#chapter-navigation .chapter-title {
  font-size: 18px;
  font-size: 1.125rem;
}

#chapter-navigation .arrow {
  position: absolute;
  font-size: 24px;
  font-size: 1.5rem;
  top: 12px;
  top: 0.75em;
}

#previous-chapter .arrow {
  transform: rotate(-90deg);
  left: -24px;
  left: -1.5rem;
}

#next-chapter {
  text-align: right;
  float: right;
}

#next-chapter .arrow {
  transform: rotate(90deg);
  right: -24px;
  right: -1.5rem;
}

aside,
.note {
  font-style: italic;
}

table,
figure {
  max-width: 100%;
}

img {
  max-width: 100%;
  height: auto;
}

.anchor-link {
  text-decoration: none;
  padding-left: 30px;
  margin-left: -30px;
}

figure .anchor-link {
  text-decoration: underline;
}

.anchor-link:hover::before,
.anchor-link:focus::before {
  content: url('/static/images/link.svg');
  content: url('/static/images/link.svg') / '';
  left: -25px;
  position: relative;
  float: left;
  width: 0;
  height: 0;
}

.fig-description-button {
  margin: 5px auto 0;
  margin: 0.3125rem auto 0;
  font-size: 12px;
  font-size: 0.75rem;
  background-color: white;
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  border-radius: 0.25rem;
  padding: 5px;
  padding: 0.3125rem;
}

.fig-description {
  border: 1px solid;
  border-radius: 10px;
  border-radius: 0.625rem;
  margin-top: 10px;
  margin-top: 0.625rem;
  padding: 10px;
  padding: 0.625rem;
  background-color: #e5e5e5;
}

figure {
  position: relative;
  display: flex;
  flex-direction: column;
  margin: 15px -8px;
  margin: 0.9375rem -0.5rem;
  padding: 8px;
  padding: 0.5rem;
  font-style: italic;
}

figure > p {
  display: inline-block;
}

figure > a {
  margin: 0 auto;
}

figure img {
  margin: 0 auto;
  border-radius: 8px;
  border-radius: 0.5rem;
  border: 1px solid #e5e5e5;
}

.height-16vw-122px {
  max-height: 122px;
  height: 16vw;
}

figure iframe {
  display: block;
  margin: 0 auto;
}

figure .code-block {
  margin: 10px auto;
  margin: 0.625rem auto;
}

figcaption {
  margin: 8px auto 0;
  margin: 0.5rem auto 0;
  text-align: center;
}

.figure-wrapper {
  position: relative;
  margin: 0 auto;
}

.figure-dropdown {
  position: absolute;
  top: -10px;
  right: -50px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.table-wrap .figure-dropdown {
  top: 0;
}

.figure-dropdown button {
  opacity: 0.5;
  border: none;
  padding: 1em;
  color: #0b1423;
}

.figure-dropdown button:focus,
.figure-dropdown button:hover {
  opacity: 1;
  color: inherit;
}

.figure-dropdown-list.nav-dropdown-list {
  position: relative;
  padding: 0;
  margin: 0;
  border-radius: 16px;
  border-radius: 1rem;
  overflow: hidden;
}

.figure-dropdown-list li {
  display: flex;
}

.figure-dropdown-list a {
  text-decoration: none;
  padding: 15px 20px;
}

.figure-dropdown-list a:hover,
.figure-dropdown-list a:focus {
  text-decoration: underline;
  background-color: #5c687d;
  color: white;
}

.figure-dropdown svg {
  pointer-events: none;
}

.figure-dropdown .nav-dropdown-btn::after {
  display: none;
}

.figure-dropdown .nav-dropdown-btn.dropdown-open {
  background-color: transparent;
  border: none;
}

.figure-dropdown .nav-dropdown-list {
  background-color: white;
  border-color: #5c687d;
}

table {
  margin: 0 auto;
  max-width: 100%;
  border-collapse: collapse;
}

thead {
  font-family: 'Poppins', sans-serif;
  border-bottom: 1px solid #eee;
}

th,
td {
  padding: 10px;
  padding: 0.625rem;
}

th.numeric,
td.numeric {
  text-align: right;
}

tbody tr:nth-child(even) {
  background-color: #f2f2f280;
}

figure .big-number {
  text-align: center;
  font: bold 128px/1em Poppins, sans-serif;
  font: bold 8rem/1em Poppins, sans-serif;
  color: #62718b;
  word-break: break-word;
  overflow-wrap: break-word;
}

figure .medium-number {
  text-align: center;
  font: bold 48px/1em Poppins, sans-serif;
  font: bold 3rem/1em Poppins, sans-serif;
  color: #62718b;
  word-break: break-word;
  overflow-wrap: break-word;
}
/* ... */

